--- a/tmui/src/package.json
+++ b/tmui/src/package.json
@@ -17,9 +17,27 @@
   },
   "homepage": "https://tissuemaps.org",
   "devDependencies": {
-    "bower": "^1.4.1",
+    "angular": "~1.5.3",
+    "angular-animate": "~1.5.5",
+    "angular-highlightjs": "~0.6.1",
+    "angular-hotkeys": "~1.6.0",
+    "angular-loading-bar": "~0.9.0",
+    "angular-marked": "~1.2.0",
+    "angular-plotly": "~0.1.3",
+    "angular-route": "~1.3.15",
+    "angular-sanitize": "~1.3.15",
+    "angular-smart-table": "~2.1.8",
+    "angular-ui-bootstrap": "~1.3.3",
+    "angular-ui-router": "~0.2.13",
+    "angular-ui-router-breadcrumbs": "~0.0.2",
+    "angular-ui-scroll": "~1.5.1",
+    "angular-ui-slider": "~0.4.0",
+    "angular-ui-sortable": "~0.13.3",
+    "angular-xeditable": "~0.1.12",
+    "checklist-model": "~0.9.0",
     "del": "^2.2.0",
     "es6-template-strings": "^2.0.0",
+    "fontawesome": "^4.6.3",
     "gulp": "^3.9.1",
     "gulp-banner": "^0.1.3",
     "gulp-concat": "^2.6.0",
@@ -35,9 +53,19 @@
     "gulp-uglify": "^1.5.3",
     "gulp-watch": "^4.3.5",
     "http-proxy-middleware": "^0.10.0",
+    "jquery": "~3.1.0",
+    "js-yaml": "~3.6.1",
+    "marked": "~0.3.5",
+    "moment": "~2.10.2",
+    "ng-file-upload": "~12.0.4",
+    "ng-infinite-scroll": "1.0.0",
+    "ngdraggable": "~0.1.8",
+    "perfect-scrollbar": "^0.6.11",
+    "plotly.js": "~1.4.1",
     "run-sequence": "^1.1.5",
     "typescript": "^1.6.2",
     "uglify-js": "2.6.1",
+    "underscore": "~1.8.3",
     "yargs": "^4.1.0"
   }
 }
