--- a/requirements.txt
+++ b/requirements.txt
@@ -7,7 +7,7 @@ blinker==1.4
 cached-property==1.3.0
 centrosome==1.0.7
 cffi==1.10.0
-click==6.7
+click==7.0
 coloredlogs==14.0
 colorlover==0.2.1
 configparser==4.0.2
@@ -15,6 +15,7 @@ contextlib2==0.6.0.post1
 cryptography==1.8.1
 cycler==0.10.0
 Cython==0.25.2
+daiquiri==2.0.0
 decorator==4.0.11
 dictproxyhack==1.1
 distlib==0.3.0
@@ -96,6 +97,7 @@ python-bioformats==1.1.0
 python-daemon==2.2.4
 python-dateutil==2.6.0
 python-editor==1.0.3
+python-json-logger==0.1.11
 pytz==2017.2
 PyWavelets==0.5.2
 PyYAML==3.12
@@ -109,6 +111,7 @@ scipy==0.19.0
 sep==1.0.0
 setuptools==44.1.0
 Shapely==1.5.17.post1
+SimpleITK==1.2.4
 simplejson==3.10.0
 singledispatch==3.4.0.3
 six==1.10.0
@@ -125,4 +128,5 @@ uWSGI==2.0.18
 virtualenv==20.0.20
 Werkzeug==0.12.1
 whichcraft==0.4.0
+yattag==1.13.2
 zipp==1.2.0
