--- a/tmui/src/package.json
+++ b/tmui/src/package.json
@@ -4,7 +4,8 @@
   "description": "Web based user interface for TissueMAPS.",
   "main": "gulpfile.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "postinstall": "node -e \"try { require('fs').symlinkSync(require('path').resolve('node_modules/@bower_components'), 'app/assets/libs/bower_components', 'junction') } catch (e) { }\""
   },
   "repository": {
     "type": "git",
@@ -17,24 +18,43 @@
   },
   "homepage": "https://tissuemaps.org",
   "devDependencies": {
-    "angular": "~1.5.3",
-    "angular-animate": "~1.5.5",
-    "angular-highlightjs": "~0.6.1",
-    "angular-hotkeys": "~1.6.0",
-    "angular-loading-bar": "~0.9.0",
-    "angular-marked": "~1.2.0",
-    "angular-plotly": "~0.1.3",
-    "angular-route": "~1.3.15",
-    "angular-sanitize": "~1.3.15",
-    "angular-smart-table": "~2.1.8",
-    "angular-ui-bootstrap": "~1.3.3",
-    "angular-ui-router": "~0.2.13",
-    "angular-ui-router-breadcrumbs": "~0.0.2",
-    "angular-ui-scroll": "~1.5.1",
-    "angular-ui-slider": "~0.4.0",
-    "angular-ui-sortable": "~0.13.3",
-    "angular-xeditable": "~0.1.12",
-    "checklist-model": "~0.9.0",
+    "@bower_components/angular": "angular/bower-angular#>=1.0.0 <=1.5.8",
+    "@bower_components/angular-animate": "angular/bower-angular-animate#~1.5.5",
+    "@bower_components/angular-bootstrap": "angular-ui/bootstrap-bower#^1.3.3",
+    "@bower_components/angular-highlightjs": "pc035860/angular-highlightjs#~0.6.1",
+    "@bower_components/angular-hotkeys": "chieffancypants/angular-hotkeys#~1.6.0",
+    "@bower_components/angular-loading-bar": "chieffancypants/angular-loading-bar#~0.9.0",
+    "@bower_components/angular-marked": "Hypercubed/angular-marked#~1.2.0",
+    "@bower_components/angular-mocks": "angular/bower-angular-mocks#~1.3.15",
+    "@bower_components/angular-plotly": "alonho/angular-plotly#~0.1.3",
+    "@bower_components/angular-route": "angular/bower-angular-route#~1.3.15",
+    "@bower_components/angular-sanitize": "angular/bower-angular-sanitize#~1.3.15",
+    "@bower_components/angular-smart-table": "lorenzofox3/Smart-Table#~2.1.8",
+    "@bower_components/angular-ui-bootstrap-bower": "angular-ui/bootstrap-bower#~1.3.3",
+    "@bower_components/angular-ui-router": "angular-ui/angular-ui-router-bower#~0.2.13",
+    "@bower_components/angular-ui-router-breadcrumbs": "interval-braining/angular-ui-router-breadcrumbs#~0.0.2",
+    "@bower_components/angular-ui-scroll": "angular-ui/ui-scroll#~1.5.1",
+    "@bower_components/angular-ui-slider": "angular-ui/ui-slider#~0.4.0",
+    "@bower_components/angular-ui-sortable": "angular-ui/ui-sortable#~0.13.3",
+    "@bower_components/angular-xeditable": "vitalets/angular-xeditable#~0.1.12",
+    "@bower_components/checklist-model": "vitalets/checklist-model#~0.9.0",
+    "@bower_components/EaselJS": "CreateJS/EaselJS#~0.8.2",
+    "@bower_components/highlightjs": "components/highlightjs#~9.3.0",
+    "@bower_components/jquery": "jquery/jquery-dist#~3.1.0",
+    "@bower_components/jquery-ui": "components/jqueryui#>=1.9",
+    "@bower_components/js-yaml": "nodeca/js-yaml#~3.6.1",
+    "@bower_components/marked": "chjj/marked#~0.3.5",
+    "@bower_components/momentjs": "moment/moment#~2.10.2",
+    "@bower_components/ng-file-upload": "danialfarid/angular-file-upload-bower#~12.0.4",
+    "@bower_components/ng-websocket": "wilk/ng-websocket#~0.2.1",
+    "@bower_components/ngDraggable": "fatlinesofcode/ngDraggable#~0.1.8",
+    "@bower_components/ngInfiniteScroll": "ng-infinite-scroll/ng-infinite-scroll-bower#1.0.0",
+    "@bower_components/perfect-scrollbar": "noraesae/perfect-scrollbar-bower#^0.6.11",
+    "@bower_components/plotly.js": "plotly/plotly.js#^1.10.2",
+    "@bower_components/plotlyjs": "b-pos465/plotly_bower#~1.4.1",
+    "@bower_components/underscore": "jashkenas/underscore#~1.8.3",
+
+    "bower": "^1.8.8",
     "del": "^2.2.0",
     "es6-template-strings": "^2.0.0",
     "fontawesome": "^4.6.3",
@@ -53,19 +73,13 @@
     "gulp-uglify": "^1.5.3",
     "gulp-watch": "^4.3.5",
     "http-proxy-middleware": "^0.10.0",
-    "jquery": "~3.1.0",
-    "js-yaml": "~3.6.1",
-    "marked": "~0.3.5",
-    "moment": "~2.10.2",
-    "ng-file-upload": "~12.0.4",
-    "ng-infinite-scroll": "1.0.0",
-    "ngdraggable": "~0.1.8",
-    "perfect-scrollbar": "^0.6.11",
-    "plotly.js": "~1.4.1",
     "run-sequence": "^1.1.5",
     "typescript": "^1.6.2",
     "uglify-js": "2.6.1",
-    "underscore": "~1.8.3",
-    "yargs": "^4.1.0"
+    "yargs": "^4.1.0",
+    "yarn": "^1.22.4"
+  },
+  "engines": {
+    "yarn": ">= 1.0.0"
   }
 }
