--- a/tmui/src/package.json
+++ b/tmui/src/package.json
@@ -19,7 +19,7 @@
   "homepage": "https://tissuemaps.org",
   "devDependencies": {
     "@bower_components/EaselJS": "CreateJS/EaselJS#~0.8.2",
-    "@bower_components/angular": "angular/bower-angular#>=1.0.0 <=1.5.8",
+    "@bower_components/angular": "angular/bower-angular#1.5.11",
     "@bower_components/angular-animate": "angular/bower-angular-animate#~1.5.5",
     "@bower_components/angular-bootstrap": "angular-ui/bootstrap-bower#^1.3.3",
     "@bower_components/angular-highlightjs": "pc035860/angular-highlightjs#~0.6.1",
@@ -39,6 +39,7 @@
     "@bower_components/angular-ui-sortable": "angular-ui/ui-sortable#~0.13.3",
     "@bower_components/angular-xeditable": "vitalets/angular-xeditable#~0.1.12",
     "@bower_components/checklist-model": "vitalets/checklist-model#~0.9.0",
+    "@bower_components/fontawesome": "FortAwesome/Font-Awesome#~4.6.3",
     "@bower_components/highlightjs": "components/highlightjs#~9.3.0",
     "@bower_components/jquery": "jquery/jquery-dist#~3.1.0",
     "@bower_components/jquery-ui": "components/jqueryui#>=1.9",
@@ -56,7 +57,6 @@
     "bower": "^1.8.8",
     "del": "^2.2.0",
     "es6-template-strings": "^2.0.0",
-    "fontawesome": "^4.6.3",
     "gulp": "^3.9.1",
     "gulp-banner": "^0.1.3",
     "gulp-concat": "^2.6.0",
