--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,5 +1,5 @@
-test:
-  type: tests
+shell-test:
+  type: test
   script:
     # First delete the previous test experiment with an empty name
     - psql -U test01 tissuemaps -c "delete from experiment_references where name = '';"
