--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,9 +1,11 @@
 shell-test:
   type: test
   script:
-    # First delete the previous test experiment with an empty name
+    # Copy TM account auth details from local file in home.
+    - cp ~/conftest.py tests/conftest.py
+    # First delete the previous test experiment, which has an empty name.
     - psql -h localhost -U test01 tissuemaps -c "delete from experiment_references where name = '';"
     - cd /srv/tissuemaps/$(hostname)/src/tests
     - . /srv/tissuemaps/$(hostname)/bin/env.sh
     - . /srv/tissuemaps/$(hostname)/bin/activate
-    - TMTEST_DATA_DIR=/data/active/jluethi/tissuemaps_test_data/v0.6.2/SyntheticData_2D_Canonical/ tox
+    - TMTEST_DATA_DIR=/net/nfs4/pelkmanslab-fileserver-common/data/share/tmaps-testdata/v0.6.x/SyntheticTestCase_alternative_results/ tox
